chore(ci): memory adjustment for elasticsearch compatibility pipeline